--- a/3class/Makefile
+++ b/3class/Makefile
@@ -1,13 +1,15 @@
+FLAGS = -std=c++17
+
 all: main
 
-User.o: User.h User.cpp
-	g++ -c User.cpp
-
 main.o: User.o main.cpp
-	g++ -c main.cpp
+	g++ -c main.cpp $(FLAGS) 
+
+User.o: User.h User.cpp
+	g++ -c User.cpp $(FLAGS)
 
 main: main.o
-	g++ User.o main.o -o main
+	g++ User.o main.o -o main $(FLAGS)
 
 clean:
 	del *.o main.exe
